--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "ant-design-vue": "^1.3.16",
+    "echarts": "^4.2.1",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
